[gd_scene load_steps=9 format=3 uid="uid://co8vab218v2tc"]

[ext_resource type="PackedScene" uid="uid://gfd6eq8drmay" path="res://player/player.tscn" id="1_5rf83"]
[ext_resource type="Script" path="res://main.gd" id="1_pba5x"]
[ext_resource type="Texture2D" uid="uid://ckblt7vlkgc3b" path="res://assets/grass.png" id="1_vv46i"]
[ext_resource type="PackedScene" uid="uid://c5cj5g6plpvsy" path="res://hud/hud.tscn" id="4_y403r"]
[ext_resource type="AudioStream" uid="uid://dmxgkg76cpgjp" path="res://assets/audio/Coin.wav" id="5_ui0tm"]
[ext_resource type="AudioStream" uid="uid://bl2npco8oulw5" path="res://assets/audio/Level.wav" id="6_h87i7"]
[ext_resource type="AudioStream" uid="uid://b8grvd7dkhqbs" path="res://assets/audio/Hit.wav" id="7_gq3i5"]
[ext_resource type="AudioStream" uid="uid://xtbx0o3pi5d" path="res://assets/audio/Powerup.wav" id="8_uqdxs"]

[node name="main" type="Node"]
script = ExtResource("1_pba5x")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("1_vv46i")
stretch_mode = 1

[node name="player" parent="." instance=ExtResource("1_5rf83")]
position = Vector2(197, 172)
velocidad = 300

[node name="contenedor_monedas" type="Node" parent="."]

[node name="InicioMarker2D" type="Marker2D" parent="."]
position = Vector2(233, 351)

[node name="juegoTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("4_y403r")]

[node name="MonedaAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ui0tm")

[node name="InicioAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_h87i7")

[node name="MorirAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gq3i5")

[node name="SpawnPowerupTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PowerupAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_uqdxs")

[connection signal="herirse" from="player" to="." method="_on_player_herirse"]
[connection signal="recolectar" from="player" to="." method="_on_player_recolectar"]
[connection signal="timeout" from="juegoTimer" to="." method="_on_juego_timer_timeout"]
[connection signal="inicioJuego" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="SpawnPowerupTimer" to="." method="_on_spawn_powerup_timer_timeout"]
